# artifacts/api-server/src/routes/v1/index.ts
@@ -3,6 +3,7 @@ import schoolsRouter from "./schools";
 import departmentsRouter from "./departments";
 import coursesRouter from "./courses";
 import usersRouter from "./users";
+import assignmentsRouter from "./assignments";
 
 const v1Router = Router();
 
@@ -10,5 +11,6 @@ v1Router.use("/", schoolsRouter);
 v1Router.use("/", departmentsRouter);
 v1Router.use("/", coursesRouter);
 v1Router.use("/", usersRouter);
+v1Router.use("/", assignmentsRouter);
 
 export default v1Router;
