# lib/db/src/schema/index.ts
@@ -3,3 +3,6 @@ export * from "./departments";
 export * from "./courses";
 export * from "./userProfiles";
 export * from "./userCourses";
+export * from "./assignments";
+export * from "./assignmentAttachments";
+export * from "./assignmentContext";
